[package]
name = "rust-cate"
version = "0.1.3"
authors = ["Nemec Lukas <lu.nemec@gmail.com>"]
description = "cat in Rust - cate, concatenate FILE(s), or standard input, to standard output. Very naive implementation."
homepage = "https://github.com/lunemec/rust-cate"
repository = "https://github.com/lunemec/rust-cate"
readme = "README.md"
keywords = ["cat", "unix"]
license = "Unlicense"

[dependencies]
clap="2.13"
lazy_static = "0.1.*"